minor ui changes

--- a/calculatorTwo.html
+++ b/calculatorTwo.html
@@ -19,16 +19,16 @@
   
   <div id="pickFunc">
 <div class="items_test1">
-  <label for="cal21">Enter Total  Mortgage Amount/Loan</label>
-  <textarea name="cal21" id="cal21" cols="30" rows="10"></textarea>
+  <label for="cal21">Enter Total  Mortgage Amount/Loan - TZS</label>
+  <textarea name="cal21" id="cal21" cols="30" rows="10" placeholder="100,000,000"></textarea>
 </div>
 <div class="items_test1">
-  <label for="cal22">Enter Interest Rate ( Yearly Rate )</label>
-  <textarea name="cal22" id="cal22" cols="30" rows="10"></textarea>
+  <label for="cal22">Enter Interest Rate ( Yearly Rate ) - %</label>
+  <textarea name="cal22" id="cal22" cols="30" rows="10" placeholder="15"></textarea>
 </div>
 <div class="items_test1">
-  <label for="cal23">Enter Total Mortage Years / Tenor</label>
-  <textarea name="cal23" id="cal23" cols="30" rows="10"></textarea>
+  <label for="cal23">Enter Total Mortage Years / Tenor - Years</label>
+  <textarea name="cal23" id="cal23" cols="30" rows="10" placeholder="20"></textarea>
 </div>
 
 
@@ -36,7 +36,7 @@
   <div id="reset">
     <button id="calcuAct">Calculate</button>
   </div>
-  <div class="emi">EMI Value</div>
+  <div class="emi">EMI Value - Monthly</div>
   <div id="answer">
     
   </div>
